0.7 Step 5 (clean useless code step 1)